fix Emacs.org file title

--- a/emacs.d/Emacs.org
+++ b/emacs.d/Emacs.org
@@ -1,4 +1,4 @@
-#+title @pablobfonseca's Emacs Configuration
+#+TITLE: @pablobfonseca's Emacs Configuration
 #+PROPERTY: header-args:emacs-lisp :tangle ./init.el :mkdirp yes
 
 * Welcome to my Personal Emacs Config
